[package]
name = "aelysion_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tracing = "0.1.41"

[dependencies.tokio]
version = "1.44.2"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]
